Pagination: using jsp and servlet

--- a/03Develop/BVAJWBEVL0201v01JSPagination/web/index.html
+++ b/03Develop/BVAJWBEVL0201v01JSPagination/web/index.html
@@ -6,11 +6,25 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+         <title>....: Banco Continental :.....</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>TODO write content</div>
+        <div>Menu de Paginación</div>
+        <hr>
+        <br>
+        <br>
+        <div>
+                <ul>
+                    <li>1.Problema 01: Paginar sin CSS y BD Embebido Postgres
+                        <p>Efectuar la paginación utilizando BD Postgres<br>
+                            En Postgres utilizar la instrucción LIMIT y OFFSET en el SELECT y ordenar por codigo<br>
+                            Usar un servlet para invocar a la controladora para traer la información de modelo
+                        </p>
+                        <a href="consultas/EVL0101v01PaginarForma01.jsp">Paginación sin CSS y BD Embebido</a>
+                    </li>
+                </ul>
+        </div>
     </body>
 </html>
