--- a/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0801v01Web.html
+++ b/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0801v01Web.html
@@ -9,7 +9,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <h1>Tabla Html5 Css Js</h1>
+        <h1>Map Html5 Css Js</h1>
         <hr>
         <div>
             <img src="planets.gif" width="145" height="126" alt="Planets" usemap="#planetmap"/>
