--- a/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0901v01Errores.html
+++ b/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0901v01Errores.html
@@ -15,7 +15,7 @@
         <hr>
         <div>
             <p>Este texto no tiene color</p>
-            <p><b>Este texto tiene que aparacer en negrita</b></p>
+            <p><b>Este texto tiene que aparacer en negrita</p>
             <p>Este texto no tiene color</p>
             <p><b>Este texto no tiene negrita</b></p>
         </div>
