--- a/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0903v01Errores02.html
+++ b/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0903v01Errores02.html
@@ -11,12 +11,12 @@
     <body>
         <h1>Errores Html5 Css Js</h1>
         <br>
-        <h5>Falla en el link</h5>
+        <h5>Falla en el span</h5>
         <hr>
         <div>
-            <p>Este texto no tiene color</p>
+            <p><span style="font-weight: bold">Este texto no tiene color</p>
             <p>Este texto tiene que aparacer en negrita</p>
-            <p>Este texto no tiene color</p>
+            <p><span style="font-weight: bold">Este texto no tiene color</span></p>
             <p>Este texto no tiene negrita</p>
         </div>
     </body>
