--- a/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0904v01Errores03.html
+++ b/03Develop/AEMJWBEVL0101v01EvaluacionHtmlCssJs/public_html/01Html/Htm0904v01Errores03.html
@@ -6,14 +6,14 @@
     <head>
         <title>[Evaluacion Html5, CSS y JS]</title>
         <meta charset="UTF-8">
-        <link href="../02Css/Css09v01Errores01.css" rel="stylesheet>
+        <link href="../02Css/Css09v02Errores03.css" rel="stylesheet>
     </head>
     <body>
         <h1>Errores Html5 Css Js</h1>
         <br>
-        <h5>Falla en el link</h5>
+        <h4>Falla en el div</h4>
         <hr>
-        <div>
+        <div id="idContenido">
             <p>Este texto no tiene color</p>
             <p>Este texto tiene que aparacer en negrita</p>
             <p>Este texto no tiene color</p>
